--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,68 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+        	<groupId>io.cucumber</groupId>
+        	<artifactId>cucumber-java</artifactId>
+        	<version>7.14.0</version>
+        	<scope>test</scope>
+    	</dependency>
+    
+    	<dependency>
+        	<groupId>io.cucumber</groupId>
+        	<artifactId>cucumber-junit-platform-engine</artifactId>
+        	<version>7.14.0</version>
+        	<scope>test</scope>
+    	</dependency>
+    
+		<dependency>
+        	<groupId>io.cucumber</groupId>
+        	<artifactId>cucumber-spring</artifactId>
+        	<version>7.14.0</version>
+        	<scope>test</scope>
+    	</dependency>
+
+		<dependency>
+    		<groupId>org.junit.platform</groupId>
+    		<artifactId>junit-platform-suite</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.junit.platform</groupId>
+    		<artifactId>junit-platform-suite-engine</artifactId>
+    		<scope>test</scope>
+		</dependency>
+
+		<!-- Selenium Dependencies -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<scope>test</scope>
+		</dependency>
+    
+    	<dependency>
+    		<groupId>io.github.bonigarcia</groupId>
+    		<artifactId>webdrivermanager</artifactId>
+    		<version>5.6.2</version>
+    		<scope>test</scope>
+		</dependency>
+
+		<dependency>
+        	<groupId>io.rest-assured</groupId>
+        	<artifactId>rest-assured</artifactId>
+        	<version>5.3.2</version>
+        	<scope>test</scope>
+    	</dependency>
+    
+    	<dependency>
+        	<groupId>io.rest-assured</groupId>
+        	<artifactId>json-schema-validator</artifactId>
+        	<version>5.3.2</version>
+        	<scope>test</scope>
+    	</dependency>
+
 	</dependencies>
 	
 	<build>
