--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.jpa.show-sql=true
 # H2 Console Configuration (Development Only)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
