--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -7,7 +7,27 @@ spring.datasource.password=
 # JPA/Hibernate configuration for tests
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
-# Disable security for tests
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+# Enable web server for UI tests
+spring.main.web-application-type=servlet
+server.port=8080
+
+# Actuator endpoints for health checks
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.endpoints.web.base-path=/actuator
+
+# Logging configuration for CI
+logging.level.com.example.studentmonitor=INFO
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
+logging.level.org.springframework.boot.actuate=INFO
+
+# Fast startup for tests
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+# Disable security for tests (but keep web server running)
+# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
