--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -213,7 +213,7 @@ jobs:
     name: Deploy to Staging
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/develop'
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
     environment: staging
     
     steps:
@@ -225,8 +225,10 @@ jobs:
     - name: 🚀 Deploy to Staging
       run: |
         echo "🚀 Deploying to Staging Environment..."
+        echo "🌿 Branch: ${{ github.ref_name }}"
         echo "📦 Artifact: $(ls -la *.jar)"
-        # Add your staging deployment commands here
+        echo "✅ Staging deployment simulation completed successfully!"
+        # Add your actual staging deployment commands here
         # Example: scp *.jar user@staging-server:/opt/app/
 
   # Job 6: Deploy to Production
@@ -246,5 +248,7 @@ jobs:
     - name: 🚀 Deploy to Production
       run: |
         echo "🚀 Deploying to Production Environment..."
+        echo "🌿 Branch: ${{ github.ref_name }}"
         echo "📦 Artifact: $(ls -la *.jar)"
-        # Add your production deployment commands here
+        echo "✅ Production deployment simulation completed successfully!"
+        # Add your actual production deployment commands here
